# python-by-example

./: .gitignore  .pylintrc  README.md  app_logging.py  jupyter-notebook.ipynb  main.py  pyproject.toml  run_examples.sh
apps/api/: post_income.py  resp_api.py
apps/grpc/: Kubernetes.yaml  docker-compose-secured.yaml  docker-compose.yaml
apps/grpc/marketplace/: Dockerfile  app_logging.py  marketplace.py  marketplace_integration_test.py
apps/grpc/recommendations/: Dockerfile  client_example1.py  recommendations.py  recommendations_pb2_grpc.py
apps/web_app/: app.py
apps/web_crawler/: web_crawler.py
examples/api/: post_income.py  resp_api.py
examples/app_logging/: app_logging.py
examples/async_io/: __init__.py  async_io_example1.py  async_io_example2.py  async_io_example3.py  async_io_example4.py  async_io_examples.py  async_io_in_a_notebook.ipynb
examples/async_iterators/: __init__.py  async_iterators_example1.py  async_iterators_example10.py  async_iterators_example2.py  async_iterators_example3.py  async_iterators_example4.py  async_iterators_example5.py  async_iterators_example6.py  async_iterators_example7.py  async_iterators_example8.py  async_iterators_example9.py
examples/async_iterators/data/: websites.txt
examples/cache/: __init__.py  cache_example1.py  docker-compose.yaml  redis_utils.py
examples/closure/: __init__.py  closure_examples.py
examples/database/: __init__.py  database_examples.py  database_sqlalchemy.py
examples/database/model/: model.py
examples/decorators/: decorators.py  decorators_example_1.py  decorators_example_2.py  decorators_example_3.py  decorators_example_4.py  decorators_example_5.py  decorators_examples.py  plugins.py
examples/generators/: __init__.py  generator_example_1.py  generators_examples.py
examples/interfaces/: interface_examples.py  interface_informal.py  interface_metaclass.py  interface_virtual_base_class.py
examples/optimization/: __init__.py  optimization_hyperopt.py
examples/progress_bar/: __init__.py  progress_bar_examples.py
examples/registry/: registry.py  registry_test.py
examples/timers/: __init__.py  timers_example1.py
examples/typehints/: __init__.py  type_hints_example.py  type_hints_examples.py  type_hints_test.py
examples/web_app/: app_with_bootstrap_styling.py
