[project]
name = "python-by-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bertrand Rigaldies", email = "brigaldies@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.poetry]
name = "python-by-example"
version = "0.1.0"
description = "Learn Python with examples"
authors = ["Bertrand Rigaldies <brigaldies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pytest = "^8.0.0"
flask = "^3.0.2"
dash = "^2.15.0"
pandas = "^2.2.1"
dash-bootstrap-components = "^1.5.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
