[project]
name = "python-by-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bertrand Rigaldies", email = "brigaldies@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.poetry]
name = "python-by-example"
version = "0.1.0"
description = "Learn Python with examples"
authors = ["Bertrand Rigaldies <brigaldies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pytest = "^8.0.0"
flask = "^3.0.2"
dash = "^2.15.0"
pandas = "^2.2.1"
dash-bootstrap-components = "^1.5.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
sqlalchemy = "^2.0.28"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
types-aiofiles = "^23.2.0.20240311"
types-requests = "^2.31.0.20240311"
redis = "^5.0.3"
tqdm = "^4.66.2"
progressbar2 = "^4.4.2"
numpy = "^1.26.4"
zipstream = "^1.1.4"
aiozipstream = "^0.4"
aiocsv = "^1.3.2"
grpcio-tools = "^1.68.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
